--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto-react",
   "version": "0.1.0",
-  "homepage": "https://artyemsavchenko.github.io/react-mesto-auth",
+  "homepage": "https://mesto-domain.nomoredomains.icu/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
